k8s/k8s-app-deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: kodomo-bank-deployment-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kodomo-bank
      tier: app
  template:
    metadata:
      labels:
        app: kodomo-bank
        tier: app
    spec:
      containers:
        - name: app
          image: asia.gcr.io/kodomo-bank-253612/kodomo_bank_app:latest
          command: ["/bin/sh", "-c"]
          args:
            # - pipenv run gunicorn -b :8000 config.wsgi;
            - pipenv run python manage.py runserver 0:8000;
          ports:
            - containerPort: 8000
              name: app
          resources:
            requests:
              cpu: 1m
              memory: 70M
          volumeMounts:
            - name: kodomo-bank-dotenv
              mountPath: /code/.env
              subPath: .env
              readOnly: true
            - name: kodomo-bank-storage
              mountPath: /code/kodomo-bank-storage.json
              subPath: kodomo-bank-storage.json
              readOnly: true
        - name: cloudsql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.09
          command:
            [
              "/cloud_sql_proxy",
              "-instances=kodomo-bank-253612:us-central1:kodomo-bank=tcp:3306",
              "-credential_file=/secrets/cloudsql/credentials.json",
            ]
          resources:
            requests:
              cpu: 1m
              memory: 5M
          volumeMounts:
            - name: kodomo-bank-cloudsql
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: ssl-certs
              mountPath: /etc/ssl/certs
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: kodomo-bank-dotenv
          secret:
            secretName: kodomo-bank-dotenv
        - name: kodomo-bank-storage
          secret:
            secretName: kodomo-bank-storage
        - name: kodomo-bank-cloudsql
          secret:
            secretName: kodomo-bank-cloudsql
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir: {}
